app_v2. solve cpu display spacing problem.

--- a/03_MangingSystem_v1/static/style.css
+++ b/03_MangingSystem_v1/static/style.css
@@ -45,6 +45,7 @@ h1 {
 }
 
 .box p {
+  font-family: monospace;
   display: inline;
   font-size: 2rem;
   margin: 10px;
